[gd_scene load_steps=11 format=3 uid="uid://o2pc1cjhjboy"]

[ext_resource type="Script" uid="uid://ctw1lpxqj77nr" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://eba0k3jjypd0" path="res://paddle.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dsawe88jymg2i" path="res://ball.tscn" id="2_0xm2m"]
[ext_resource type="AudioStream" uid="uid://6xc4qmhixxy0" path="res://audio/Jes√∫s Lastra - Heatstroke.mp3" id="4_272bh"]
[ext_resource type="AudioStream" uid="uid://d2pae08fxsgu1" path="res://audio/269718__michorvath__ping-pong-ball-hit.wav" id="5_5vw27"]
[ext_resource type="AudioStream" uid="uid://b8bmsrofyt0ec" path="res://audio/108737__branrainey__boing.wav" id="6_kek77"]
[ext_resource type="AudioStream" uid="uid://dvkj8pi0d8xg6" path="res://audio/514160__edwardszakal__score-beep.mp3" id="7_4c57u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dm0k"]
size = Vector2(820.919, 153.833)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(17, 149)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0, 0, 0, 0.00392157)

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2(940, 72)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
scale = Vector2(1.96, 0.600001)
shape = SubResource("RectangleShape2D_7dm0k")

[node name="ColorRect" type="ColorRect" parent="TopWall"]
offset_left = -805.0
offset_top = -45.0
offset_right = 805.0
offset_bottom = 45.0

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(940, 986)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
scale = Vector2(1.96, 0.597983)
shape = SubResource("RectangleShape2D_7dm0k")

[node name="ColorRect" type="ColorRect" parent="BottomWall"]
offset_left = -805.0
offset_top = -45.0
offset_right = 805.0
offset_bottom = 45.0

[node name="Divider" type="ColorRect" parent="."]
offset_left = 937.0
offset_top = 161.0
offset_right = 941.0
offset_bottom = 201.0
scale = Vector2(1.46437, 18.6215)

[node name="LeftPaddle" type="CharacterBody2D" parent="."]
position = Vector2(270, 456)
script = ExtResource("1_ig7tw")
speed = 850.0
up_action = "p1_up"
down_action = "p1_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPaddle"]
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ColorRect" type="ColorRect" parent="LeftPaddle"]
offset_left = -10.0
offset_top = -75.0
offset_right = 10.0
offset_bottom = 75.0

[node name="RightPaddle" type="CharacterBody2D" parent="."]
position = Vector2(1550, 456)
script = ExtResource("1_ig7tw")
speed = 850.0
up_action = "p2_up"
down_action = "p2_down"
ai_smoothness = 8.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPaddle"]
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ColorRect" type="ColorRect" parent="RightPaddle"]
offset_left = -10.0
offset_top = -75.0
offset_right = 10.0
offset_bottom = 75.0

[node name="Ball" parent="." instance=ExtResource("2_0xm2m")]
position = Vector2(937, 447)
scale = Vector2(0.374735, 0.399999)

[node name="UI" type="CanvasLayer" parent="."]

[node name="LeftScore" type="Label" parent="UI"]
offset_left = 30.0
offset_top = 134.0
offset_right = 130.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightScore" type="Label" parent="UI"]
offset_left = 1729.0
offset_top = 134.0
offset_right = 1829.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Game Over!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="MenuButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_272bh")
volume_db = -5.0
autoplay = true

[node name="PaddleHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5vw27")
volume_db = 5.0

[node name="WallBounceSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_kek77")
volume_db = -5.0

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_4c57u")
volume_db = -5.0
